--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Dependencies
 node_modules
+.local_node
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Production
+dist
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
