Added update date in the footer and light/dark toggle at the header

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
+          export VITE_LAST_UPDATED=$(date +'%B %d, %Y')
           npm run build
 
       - name: Deploy
